--- a/found and lost/auth.html
+++ b/found and lost/auth.html
@@ -35,14 +35,11 @@
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: center;
-      padding: 1.5rem;
+      align-items: flex-start;
+      padding: 2.5rem 1.5rem;
       color: var(--text-main);
-      background:
-        radial-gradient(circle at top left, rgba(59, 130, 246, 0.4), transparent 55%),
-        radial-gradient(circle at bottom right, rgba(244, 114, 182, 0.35), transparent 55%),
-        radial-gradient(circle at top right, rgba(56, 189, 248, 0.3), transparent 55%),
-        #020617;
+      background: #020617;
+      position: relative;
       overflow-x: hidden;
     }
 
@@ -51,13 +48,13 @@
       content: "";
       position: fixed;
       inset: 0;
-      background:
-        radial-gradient(circle at 20% 0%, rgba(59, 130, 246, 0.25), transparent 55%),
-        radial-gradient(circle at 80% 100%, rgba(244, 114, 182, 0.25), transparent 55%);
-      filter: blur(48px);
-      opacity: 0.85;
+      background-image: url("Frontview 2023.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      filter: blur(7px) brightness(0.85);
+      transform: scale(1.04);
       z-index: -2;
-      pointer-events: none;
     }
 
     /* Subtle tech/grid pattern overlay */
@@ -65,34 +62,26 @@
       content: "";
       position: fixed;
       inset: 0;
-      background-image:
-        linear-gradient(
-          rgba(15, 23, 42, 0.75),
-          rgba(15, 23, 42, 0.9)
-        ),
-        linear-gradient(
-          120deg,
-          rgba(148, 163, 184, 0.16) 0%,
-          transparent 40%,
-          transparent 60%,
-          rgba(148, 163, 184, 0.16) 100%
-        ),
+      background:
+        radial-gradient(circle at 18% 20%, rgba(59, 130, 246, 0.25), transparent 45%),
+        radial-gradient(circle at 82% 78%, rgba(244, 114, 182, 0.22), transparent 42%),
+        linear-gradient(120deg, rgba(15, 23, 42, 0.78), rgba(15, 23, 42, 0.92)),
         repeating-linear-gradient(
           to right,
-          rgba(30, 64, 175, 0.22) 0,
-          rgba(30, 64, 175, 0.22) 1px,
+          rgba(59, 130, 246, 0.18) 0,
+          rgba(59, 130, 246, 0.18) 1px,
           transparent 1px,
-          transparent 26px
+          transparent 28px
         ),
         repeating-linear-gradient(
           to bottom,
-          rgba(30, 64, 175, 0.16) 0,
-          rgba(30, 64, 175, 0.16) 1px,
+          rgba(59, 130, 246, 0.12) 0,
+          rgba(59, 130, 246, 0.12) 1px,
           transparent 1px,
-          transparent 26px
+          transparent 28px
         );
       mix-blend-mode: soft-light;
-      opacity: 0.3;
+      opacity: 0.55;
       z-index: -1;
       pointer-events: none;
     }
@@ -498,24 +487,33 @@
 
     /* Dashboard Styles - Modern Vibrant Theme */
     #mainApp {
-      width: 100%;
-      min-height: 100vh;
+      width: min(1100px, 96vw);
+      min-height: 80vh;
       display: flex;
       flex-direction: column;
-      background: linear-gradient(180deg, #0f0c29 0%, #302b63 50%, #24243e 100%);
+      background: linear-gradient(135deg, rgba(15, 23, 42, 0.95), rgba(15, 23, 42, 0.85));
+      border-radius: var(--radius-card);
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      box-shadow: var(--shadow-soft);
+      padding: 2.2rem 2rem;
+      margin: 4.5rem auto 2.5rem auto;
+      text-align: left;
+      backdrop-filter: blur(22px);
+      -webkit-backdrop-filter: blur(22px);
+      position: relative;
+      overflow: hidden;
     }
 
     .dashboard-header {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: white;
-      padding: 1.8rem 2.5rem;
+      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
       box-shadow: 0 8px 32px rgba(102, 126, 234, 0.4);
-      position: sticky;
-      top: 0;
-      z-index: 100;
+      border-radius: 16px;
+      margin-bottom: 2rem;
       border-bottom: 3px solid rgba(255, 255, 255, 0.1);
     }
 
@@ -552,8 +550,8 @@
     }
 
     .dashboard-main {
-      padding: 2.5rem;
-      max-width: 1400px;
+      padding: 2rem 0.5rem 2rem 0.5rem;
+      max-width: 100%;
       width: 100%;
       margin: 0 auto;
       flex: 1;
@@ -562,8 +560,8 @@
     .dashboard-welcome {
       background: linear-gradient(135deg, rgba(118, 75, 162, 0.25), rgba(102, 126, 234, 0.2));
       border: 2px solid rgba(255, 255, 255, 0.15);
-      border-radius: 24px;
-      padding: 2.5rem;
+      border-radius: 20px;
+      padding: 2rem;
       margin-bottom: 2.5rem;
       box-shadow: 0 10px 40px rgba(102, 126, 234, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(20px);
@@ -624,11 +622,9 @@
 
     .nav-grid {
       display: grid;
-      grid-template-columns: repeat(5, minmax(220px, 1fr));
+      grid-template-columns: repeat(4, minmax(220px, 1fr));
       gap: 2rem;
       margin-top: 1rem;
-      overflow-x: auto;
-      white-space: nowrap;
     }
 
     .nav-card {
@@ -758,16 +754,9 @@
       }
 
       .nav-grid {
-        grid-template-columns: repeat(5, minmax(220px, 1fr));
+        grid-template-columns: repeat(2, minmax(180px, 1fr));
         gap: 1.2rem;
-        overflow-x: auto;
-        white-space: nowrap;
       }
-      .nav-card {
-        min-width: 220px;
-        max-width: 260px;
-      }
-
       .nav-card {
         padding: 1.8rem;
       }
@@ -836,7 +825,7 @@
   <!-- After Login - Main App -->
   <div id="mainApp">
     <header class="dashboard-header">
-      <h2>📌 CampusLost Dashboard</h2>
+      <h2>CampusLost Dashboard</h2>
       <button class="logout-btn" onclick="logout()">Logout</button>
     </header>
     <main class="dashboard-main">
@@ -868,11 +857,6 @@
             <div class="nav-card-icon">🔐</div>
             <h5 class="nav-card-title">Verify Claim</h5>
             <p class="nav-card-desc">Verify and process item claims</p>
-          </a>
-          <a href="dashboard.html" class="nav-card">
-            <div class="nav-card-icon">📊</div>
-            <h5 class="nav-card-title">Advanced Dashboard</h5>
-            <p class="nav-card-desc">View detailed analytics and reports</p>
           </a>
         </div>
       </div>
